# Binane_test

./: .env  .env.example  .gitignore  Cargo.toml  README.md  deploy.md  main.py  package-lock.json  package.json
docs/: architecture_analysis.md  python_vs_rust_comparison.md
src/: index.js  main.rs
